Sutter Health/src/objects/Census__c.object
<CustomObject>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Zip__c</fullName>
        <label>Employee Zip</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Format_Match_Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Format Match Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Censuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>To show whether the census record is errored or success.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Errored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>TextArea</type>
    </fields>
    <label>SHP Census</label>
    <listViews>
        <fullName>SHP_Census_Data</fullName>
        <columns>NAME</columns>
        <columns>Gender__c</columns>
        <columns>Plan__c</columns>
        <columns>Tier__c</columns>
        <columns>DOB__c</columns>
        <columns>Employee_Zip__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>SHP Census Data</label>
    </listViews>
    <nameField>
        <displayFormat>Census-{000000}</displayFormat>
        <label>Census Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SHP Censuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>